--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,7 +1,7 @@
 items:
-# - url: /
-#   name: Home
-#   icon_class: fa fa-home fa-lg
+- url: /
+  name: Home
+  icon_class: fa fa-home fa-lg
 
 # - url: /schedule/
 #   name: Schedule
@@ -11,9 +11,9 @@ items:
 #   name: Lectures
 #   icon_class: fas fa-book-reader
 
-- url: /assignments/
-  name: Assignments
-  icon_class: fas fa-user-graduate
+# - url: /assignments/
+#   name: Assignments
+#   icon_class: fas fa-user-graduate
 
 # - url: /project/
 #   name: Project
